2004-08-25  Richard B. Kreckel  <richard.kreckel@framatome-anp.com>

	PR target/17171
	* config/i386/gas.h (ASM_COMMENT_START): Define to "#".

2004-08-25  Richard Henderson  <rth@redhat.com>

        * config/alpha/alpha.c (alpha_cannot_force_const_mem): New.
        (TARGET_CANNOT_FORCE_CONST_MEM): New.

2004-08-25  Andrew MacLeod  <amacleod@redhat.com>

	* doc/tree-ssa.texi: Document new operand iterator.

2004-08-26  Alan Modra  <amodra@bigpond.net.au>

	PR target/16480
	* config/rs6000/rs6000.c (rs6000_split_multireg_move): Don't abort
	on "(mem (symbol_ref ..))" rtl.  Look at LO_SUM base regs as well
	as PLUS base regs.

2005-08-28  Paul Brook  <paul@codesourcery.com>

	* config/arm/symbian.h (SUBTARGET_ASM_FLOAT_SPEC): Default to
	-mfpu=vfp -march=armv5t
	* config/arm/t-symbian: Change multilib to mfloat-abi=softfp.

2004-08-25  Richard Henderson  <rth@redhat.com>

	* target-def.h (TARGET_SCALAR_MODE_SUPPORTED_P): New.
	* target.h (struct gcc_target): Add scalar_mode_supported_p.
	* targhooks.c (default_scalar_mode_supported_p): New.
	* targhooks.h (default_scalar_mode_supported_p): Declare.
	* doc/tm.texi (TARGET_SCALAR_MODE_SUPPORTED_P): Document.

	* c-common.c (handle_mode_attribute): Query scalar_mode_supported_p
	before attempting to create types.  Tidy.
	* expr.c (vector_mode_valid_p): Use scalar_mode_supported_p.

	* config/alpha/alpha.c (alpha_scalar_mode_supported_p): New.
	(TARGET_SCALAR_MODE_SUPPORTED_P): New.

2004-08-25  Richard Henderson  <rth@redhat.com>

	* config/i386/freebsd.h (SUBTARGET_OVERRIDE_OPTIONS): Don't
	set REAL_MODE_FORMAT for TFmode.

2004-08-25  Ziemowit Laski  <zlaski@apple.com>

	* c-decl.c (grokparm): New function.
	* c-tree.h (grokparm): New prototype.

2004-08-25  Andrew MacLeod  <amacleod@redhat.com>

	* tree-ssa-operands.h (struct ssa_operand_iterator_d): New.  SSA operand
	iterator controlling structure.
	(SSA_OP_USE, SSA_OP_DEF, SSA_OP_VUSE, SSA_OP_VMAYUSE, SSA_OP_VMAYDEF,