@@ -1,3 +1,10 @@
+2004-08-25  Richard Henderson  <rth@redhat.com>
+ 
+        PR debug/10695
+        * config/alpha/alpha.c (emit_frame_store_1, emit_frame_store): New.
+        (alpha_expand_prologue): Handle >32-bit frames.  Generate proper
+        unwind info for >16-bit frames.
+
 2004-08-25  Richard B. Kreckel  <richard.kreckel@framatome-anp.com>
 
 	PR target/17171
